- bug #2966752 [setup] Allow to configure changes tracking in setup script.
+ patch #2981165 [edit] Optionally disable the Type column, 
  thanks to Brian Douglass - bhdouglass
+ patch #2984058 [edit] Buttons for quicky creating common SQL queries, thanks
  to sutharshan.
+ patch #2984337 [interface] Convert loading of export/import to jQuery ready
  event, thanks to sutharshan.

3.3.3.0 (not yet released)
- patch #2982480 [navi] Do not group if there would be one table in group,
  thanks to Lorikeet Lee.
- patch #2983492 [sync] When asking to synchronize Structure and Data,
  only Structure is done, thanks to Ankit Gupta - ankitgupta3
- patch #2984893 [engines] InnoDB storage page emits a warning,
  thanks to Madhura Jayaratne - madhuracj

3.3.2.0 (not yet released)
- patch #2969449 [core] Name for MERGE engine varies depending on the
  MySQL version, thanks to Dieter Adriaenssens - ruleant
- bug #2966078 [browse] Incorrect LIMIT is saved and sticks while browsing
- bug #2967366 [Structure] Some results of Propose table structure are
  shown in hex
- bug #2967565 [insert] UNHEX not selected by default when inserting BINARY
- [navi] Changed link to git repository on main page
- bug #2972232 [menu] Import menu tab not present on main page
- patch #2976790 [menu] Go to the upper level after table DROP,
  thanks to Kaarel Nummert - kaarelnu
- patch #2978815 [pdf] Fix generating PDF with table dimensions, thanks to BlinK_
- patch #2977725 [export] XML wrongly encoded, thanks to Victor Volkov - hanut
- patch #2979234 [import] Create tables with current charset and collation.
- patch #2979234, bug #2960105 [import] Properly import unicode text from ODS.
- bug #2973280 [export] Proper handling of temporary directory in XLS export.
- bug #2980582 [interface] Properly format server status parameter.
- bug #2973949 [session] SQL History broken (revert patch #2899969),
  thanks to Dieter Adriaenssens - ruleant
- [doc] Be more specific about problems with Suhosin.
